# gtc

./: README.md
gtc-package/: README.md  pyproject.toml
gtc-package/gtc/: __init__.py  count_tokens.py  mcp_server.py
