[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtc"
version = "1.0.0"
description = "GPT Token Counter - Count tokens in files using tiktoken"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Muhammed Alan"}
]
keywords = ["tiktoken", "tokens", "gpt", "openai", "tokenizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "tiktoken>=0.5.0",
    "mcp>=1.0.0",
]

[project.scripts]
gtc = "gtc.count_tokens:main"
gtc-mcp = "gtc.mcp_server:main"

[project.urls]
"Source" = "https://github.com/openai/tiktoken"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtc*"]
